--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ title: Ben Tsai Blog
 SEOTitle: Ben Tsai 的博客 | Ben Tsai Blog
 header-img: img/home-bg.jpg
 email: huxpro@gmail.com
-description: "关于程序与设计、黑客与画家 | 黄玄，Web & Mobile Lover，Software Engineer，UX Designer | 这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界。"
-keyword: "黄玄, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, 前端, 设计"
-url: "https://BenTsai7.github.io"              # your host, for absolute URL
+description: "Software Engineering Student | 这里是 Ben Tsai 的个人博客，与你一起发现更大的世界。"
+keyword: "Ben Tsai, BenTsai7, @BenTsai7,  Ben Tsai 的博客, 博客, 个人网站, 互联网, Web, Github Pages"
+url: "https://bentsai7.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
@@ -22,17 +22,13 @@ paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 # If you have timezone issue (e.g. #68) in China, uncomment to use this:
-#timezone: CN  
-
-
+timezone: CN  
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
 # make sure you have this gem installed
 # `$ gem install jekyll-paginate`
 plugins: [jekyll-paginate]
-
-
 
 # Markdown settings
 # replace redcarpet to kramdown,
@@ -48,44 +44,32 @@ kramdown:
       line_numbers: true
       start_line: 1
 
-
-
 # Disqus settings
 disqus_username: hux
 
 # Netease settings
 netease_comment: false
 
-
-
 # Analytics settings
 # Baidu Analytics 
 # ba_track_id: [your track id]
 
 # Google Analytics
-ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
-
-
+ga_track_id:            # Format: UA-xxxxxx-xx
+ga_domain:
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "For the next quantum leap<br>离开世界之前，一切都是过程"
 sidebar-avatar: /img/avatar-hux-ny.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
-
-
 # Featured Tags
 featured-tags: true                     # whether or not using Feature-Tags
 featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
 
-
-
 # Progressive Web Apps
 chrome-tab-theme-color: "#000000"
 service-worker: true
-
-
 
 # MathJax rendering for layout:page (e.g. post preview)
 page-mathjax: false
