--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hello, World
+title: 
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -11,8 +11,8 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Ben Tsai # add your name
 author-img: bentsai7.jpg # add your photo
-location: Guangzhou, China 
-about-author: Software Engineering Student of Sun Yat-sen University # add description
+location:
+about-author:  # add description
 info-author: 
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
